<color:ff00ff>==-- CHANGELOG --==
<color:22ffaa>indev1-1 <color:999999>[04/05/2015] <color:ffffff>-- initial appearance of server<color:22ffaa>indev1-2 <color:999999>[04/05/2015] <color:ffffff>-- fixed issues with reset schedules
<color:22ffaa>indev2-1 <color:999999>[04/05/2015] <color:ffffff>-- bottom print revamp, end-of-round stats, fixed explosions
<color:22ffaa>indev2-2 <color:999999>[04/05/2015] <color:ffffff>-- bug fixes
<color:22ffaa>indev2-3 <color:999999>[04/06/2015] <color:ffffff>-- more bugfixes
<color:22ffaa>v0.1 <color:999999>[04/07/2015] <color:ffffff>-- code now public, added shrapnel bombs, /leaderboard command, sky flashes when a laser explodes, max cubes increased from 4096 to 5632
<color:22ffaa>v0.1.1 <color:999999>[04/08/2015] <color:ffffff>-- swapped % and # of cubes in the bottom print, added speed
<color:22ffaa>v0.1.2 <color:999999>[04/08/2015] <color:ffffff>-- more bombs dynamically spawn in, added tenths to speed, x20 new max for combo messages, sky flashing scales with player count
<color:22ffaa>v0.1.3 <color:999999>[04/09/2015] <color:ffffff>-- added score system (1*combo per hit), laser speed doubled, discovered mFloatLength was a thing
<color:22ffaa>v0.1.4 <color:999999>[04/09/2015] <color:ffffff>-- organized code better, shrapnel now deleted upon round end
<color:22ffaa>v0.1.5 <color:999999>[04/09/2015] <color:ffffff>-- projectiles now last for infinity, stolen cubes play a sound to the original owner, how-to-play upon connecting
<color:22ffaa>v0.1.6 <color:999999>[04/09/2015] <color:ffffff>-- bugfixes, changelog now its own command
<color:22ffaa>v0.1.7 <color:999999>[04/09/2015] <color:ffffff>-- wins/losses now tracked and saved, corrected speed display
<color:22ffaa>v0.1.8 <color:999999>[04/10/2015] <color:ffffff>-- bricks can now optionally help you fly up